--- a/assignment1/Test_code.ipynb
+++ b/assignment1/Test_code.ipynb
@@ -209,21 +209,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[30]\n",
-      " [10]\n",
-      " [ 4]]\n",
-      "[30 14]\n",
-      "\n",
-      "[[60 44]\n",
-      " [40 24]\n",
-      " [34 18]]\n"
+     "ename": "NameError",
+     "evalue": "name 'np' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-c571bb485dfa>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0ma\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m30\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mb\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m30\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m14\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mb\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'np' is not defined"
      ]
     }
    ],
@@ -236,6 +233,80 @@
     "print()\n",
     "\n",
     "print(a+b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3 4 5]\n",
+      " [2 3 4 5 6]\n",
+      " [1 3 4 5 6]\n",
+      " [3 7 6 4 3]]\n",
+      "[[1]\n",
+      " [3]\n",
+      " [4]\n",
+      " [2]]\n",
+      "[array([[1, 2, 3, 4, 5],\n",
+      "       [2, 3, 4, 5, 6]]), array([[1, 3, 4, 5, 6]]), array([[3, 7, 6, 4, 3]])]\n",
+      "[array([[1],\n",
+      "       [3]]), array([[4]]), array([[2]])]\n",
+      "==========\n",
+      "(2, 5)\n",
+      "[[3 7 6 4 3]]\n",
+      "[[1 2 3 4 5]\n",
+      " [2 3 4 5 6]\n",
+      " [3 7 6 4 3]]\n",
+      "==========\n",
+      "[[1]\n",
+      " [3]\n",
+      " [4]\n",
+      " [2]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "x = np.array([[1,2,3,4,5],[2,3,4,5,6],[1,3,4,5,6],[3,7,6,4,3]])\n",
+    "y = np.array([[1],[3],[4],[2]])\n",
+    "print(x)\n",
+    "print(y)\n",
+    "print(np.array_split(x, 3))\n",
+    "print(np.array_split(y, 3))\n",
+    "print(\"==========\")\n",
+    "print(x[0:2].shape)\n",
+    "print(x[3:])\n",
+    "print(np.vstack((x[0:2],x[3:])))\n",
+    "print(\"==========\")\n",
+    "# print(x[:,0])\n",
+    "\n",
+    "y.reshape(-1,1)\n",
+    "print(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0: [0.1], 1: [0.2]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "k_to_accuracies = {}\n",
+    "k_to_accuracies[0] = [0.1]\n",
+    "k_to_accuracies[1] = [0.2]\n",
+    "print(k_to_accuracies)"
    ]
   }
  ],
