--- a/assignment1/Test_code.ipynb
+++ b/assignment1/Test_code.ipynb
@@ -274,6 +274,7 @@
     "import numpy as np\n",
     "x = np.array([[1,2,3,4,5],[2,3,4,5,6],[1,3,4,5,6],[3,7,6,4,3]])\n",
     "y = np.array([[1],[3],[4],[2]])\n",
+    "z = np.array([[1,3,4,5,6]])\n",
     "print(x)\n",
     "print(y)\n",
     "print(np.array_split(x, 3))\n",
@@ -286,7 +287,9 @@
     "# print(x[:,0])\n",
     "\n",
     "y.reshape(-1,1)\n",
-    "print(y)"
+    "z.reshape(-1,1)\n",
+    "print(y)\n",
+    "print(z)"
    ]
   },
   {
